Add assertions and missing titles for tests that are not run